# engram

./: .gitignore  Benchmarking AI Memory Systems_ Engram.md  LICENSE  LLM Callback and Logging Systems.md  MEMORY_SYSTEM_AUDIT.md  README.md  README_SOUL_CREATION.md  pyproject.toml  soul_creation_gui.py
docs/research_prompts/: FINDINGS-code-first-memory-pivot.md  FINDINGS-sota-memory-improvements.md  code-first-memory-system-pivot.md  memory-system-benchmarking.md  sota-memory-retrieval-and-generation.md
engram/: __init__.py  __main__.py  emotional.py  introspection.py  journal.py  oauth_setup.py  personality.py  safety.py  server.py  soul.py  soul_creator.py  system.py  trust.py  workspace.py
engram/consciousness/: __init__.py  boot.py  identity.py
engram/consolidation/: __init__.py  compactor.py  consolidator.py  pressure.py
engram/core/: __init__.py  config.py  filelock.py  logging.py  sessions.py  tokens.py  types.py
engram/episodic/: __init__.py  store.py
engram/extraction/: __init__.py  ast_engine.py  fingerprint.py  symbol_index.py
engram/pipeline/: __init__.py  adr_detector.py  after.py  before.py
engram/procedural/: __init__.py  schema.py  store.py
engram/runtime/: __init__.py  actions.py  mind.py  modes.py
engram/search/: __init__.py  code_embeddings.py  indexed.py  reranker.py  semantic.py  tokenizer.py  unified.py
engram/semantic/: __init__.py  identity.py  store.py
engram/signal/: __init__.py  decay.py  extract.py  measure.py  reinforcement.py  style.py
engram/working/: __init__.py  allocator.py  context.py  query_classifier.py
integrations/openclaw/: engram-extension.json
integrations/openclaw/skills/engram-memory/: SKILL.md
integrations/opencode/: engram-plugin.js
integrations/skill/: SKILL.md
tests/: conftest.py  test_adr_detector.py  test_allocator.py  test_ast_engine.py  test_code_embeddings.py  test_config.py  test_consciousness.py  test_consolidation.py  test_emotional.py  test_episodic.py  test_fingerprint.py  test_grounding.py  test_introspection.py  test_journal.py  test_new_subsystems.py  test_personality.py  test_pipeline.py  test_procedural.py  test_project_scope.py  test_query_classifier.py  test_reorder_wiring.py  test_runtime.py  test_safety.py  test_semantic.py  test_server.py  test_sessions.py  test_signal.py  test_skill_reinforcement.py  test_skill_schema.py  test_soul.py  test_style.py  test_symbol_index.py  test_system.py  test_tokenizer.py  test_trust.py  test_types.py  test_workspace.py
