[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engram"
version = "0.2.0"
description = "Four-layer memory system for persistent AI identity"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Aidan Poole", email = "aidan@relicstudios.com" },
]
keywords = ["memory", "ai", "consciousness", "identity", "mcp", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "chromadb>=0.4.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
ast = [
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
]
code-embeddings = [
    "sentence-transformers>=3.0.0",
]
ollama = ["httpx>=0.25.0"]
anthropic = ["anthropic>=0.30.0"]
openai = ["openai>=1.0.0"]
all = [
    "httpx>=0.25.0",
    "anthropic>=0.30.0",
    "openai>=1.0.0",
    "sentence-transformers>=3.0.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21.0"]

[project.urls]
Homepage = "https://github.com/Relic-Studios/engram"
Repository = "https://github.com/Relic-Studios/engram"
Issues = "https://github.com/Relic-Studios/engram/issues"

[project.scripts]
engram = "engram.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["engram"]
