[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engram"
version = "0.2.0"
description = "Four-layer memory system for persistent AI identity"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Aidan Poole", email = "aidan@relicstudios.com" },
]
keywords = ["memory", "ai", "consciousness", "identity", "mcp", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "chromadb>=0.4.0",
    "mcp>=1.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
# AST extraction for JS/TS (Python uses stdlib ast)
ast = [
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
]
# Code-specific embeddings (jina-embeddings-v2-base-code)
# Also required for cross-encoder reranking
code-embeddings = [
    "sentence-transformers>=3.0.0",
]
# HDBSCAN topic-coherent consolidation clustering
consolidation = [
    "hdbscan>=0.8.33",
]
# Accurate token counting (falls back to len//4 without)
tokens = [
    "tiktoken>=0.5.0",
]
# LLM provider backends
ollama = ["httpx>=0.25.0"]
anthropic = ["anthropic>=0.30.0"]
openai = ["openai>=1.0.0"]
# Everything — install all optional features
all = [
    "httpx>=0.25.0",
    "anthropic>=0.30.0",
    "openai>=1.0.0",
    "sentence-transformers>=3.0.0",
    "hdbscan>=0.8.33",
    "tiktoken>=0.5.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21.0"]

[project.urls]
Homepage = "https://github.com/Relic-Studios/engram"
Repository = "https://github.com/Relic-Studios/engram"
Issues = "https://github.com/Relic-Studios/engram/issues"

[project.scripts]
engram = "engram.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["engram"]
